--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 
-  <div class="card">
-    <img class="qr" src="assets/images/image-qr-code.png" alt="QR code to visit Frontend Mentor">
-    <h1 class="qr-title">Improve your front-end skills by building projects</h1>
-    <p class="qr-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  <main class="container" role="main">
+
+    <div class="card" role="region" aria-labelledby="QR-card">
+      <img class="qr" src="assets/images/image-qr-code.png" alt="QR code to visit Frontend Mentor">
+      <h1 class="qr-title">Improve your front-end skills by building projects</h1>
+      <p class="qr-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+
+  </main>
 
 </body>
 </html>
